raffia/tests/error/scss/at-rule/forward/hide-trailing-comma.snap
---
source: raffia/tests/error.rs
---
error: expect token `$var`, but found `;`
  ┌─ hide-trailing-comma.scss:1:21
  │
1 │ @forward "a" hide b,;
  │                     ^


